Wed Sep  1 15:39:41 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	Applied "bugfixes" patch collection, which I had posted to
	htdig@htdig.org mailing list in August.  Changes include...

	* htsearch/Display.cc(expandVariables): Fix problem with $(VAR)
	at end of template string not being expanded.

	* htlib/URL.cc(URL): Fix PR#566 by setting the correct length of the
	string being matched. 'http://' is 7 characters. Submitted by
	<wolfgang.pichler@creditanstalt.co.at>.

	* htdig/HTML.h, htdig/HTML.cc(do_tag, transSGML): Fix the HTML parser
	to decode SGML entities within tag attributes.

	* htlib/URL.cc(ServerAlias): Fix server_alias entries so port defaults
	to 80 if omitted.

	* htlib/URL.cc(removeIndex): Fix the infamous problem with files
	like left_index.html not getting indexed.  PR#543 & PR#585.

	* htdig/PDF.cc(parseNonTextLine): Fixed a bug in the PDF parser:
	when the Title header was just the temporary file name, it
	wouldn't be used, but it also wouldn't be cleared from the
	_parsedString variable, so it ended up polluting the document
	excerpt.

	* htdig/Document.cc(RetrieveHTTP): Added error messages for unknown
	hosts.

	* htlib/cgi.cc(cgi): Fix PR#572, where htsearch crashed if
	CONTENT_LENGTH was not set but REQUEST_METHOD was.

	* htdig/HTML.cc(do_tag): Fix <meta> robots parsing to allow
	multiple directives to work correctly. Fixes PR#578, as provided
	by Chris Liddiard <c.h.liddiard@qmw.ac.uk>.

	* htsearch/htsearch.cc(main): Allow multiple keywords input
	parameters in search forms.

	* htdig/Document.cc(Reset, readHeader): Fix the bug in the handling
	of modification_time_is_now.

	* htfuzzy/Fuzzy.cc(getWords), htfuzzy/Metaphone.cc(vscode,generateKey):
	Should fix PR#514 in the bug database.  It's Geoff's first patch,
	with a minor correction, plus an added test in the vscode macro,
	which is where the problem seemed to be happening.  This won't
	map accented vowels to their unaccented counterparts, but